# git-pilot

./: CLAUDE.md  Cargo.toml  FEATURES.md  TODO.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/app/: actions.rs  background.rs  controller.rs  mod.rs  state.rs  suggestions.rs
src/domain/: ai.rs  branch.rs  commit.rs  config.rs  errors.rs  mod.rs  pull_request.rs  remote.rs  repo.rs  settings.rs  status.rs
src/infrastructure/: ai.rs  config.rs  git_cli.rs  git_remote.rs  github.rs  mod.rs  process.rs  repo_discovery.rs
src/infrastructure/copilot/: auth.rs  client.rs  diff.rs  mod.rs  prompts.rs  types.rs
src/shared/: mod.rs  shortcuts.rs  text_input.rs
src/ui/: branch_manage_panel.rs  branch_panel.rs  branches_view.rs  commit_log_panel.rs  commit_panel.rs  copilot_login_panel.rs  create_pr_panel.rs  create_repo_panel.rs  diff_panel.rs  help.rs  layout.rs  log_view.rs  message_panel.rs  mod.rs  mouse.rs  pr_view.rs  remotes_view.rs  screen.rs  settings_panel.rs  settings_view.rs  status_list.rs  summary_line.rs  tabs.rs  theme.rs  view_tabs.rs
tests/: git_cli_integration.rs
